Fix 404 error with correct vercel.json rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/Wad_FrontEnd/dist/index.html"
+      "destination": "/index.html" 
     }
   ]
 }
